n8n/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
spec:
  replicas: 1

  selector: {}

  template:
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: n8nio/n8n:1.25.1
          name: n8n
          ports:
            - name: http
              containerPort: 5678
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: data

      restartPolicy: Always

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
