n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
